2016-12-25	Eye octal.  (2)

		include/innocent-pear/omg.h :
		- now using new interface to tfw<...>
		- ugly hack for testing under Qemu: now does not use
		  FS_IOC_GETFLAGS and FS_IOC_GETVERSION if ptrace(...) is
		  unimplemented

		include/innocent-pear/tfw.h :
		- redefined interface to tfw<...>

		include/innocent-pear/unpossible.h :
		- tweaked for x86-32

2016-12-24	Eye octal.

		configure :
		- now handles FS_IOC_GETFLAGS and FS_IOC_GETVERSION constants
		  (in <linux/fs.h>)

		GNUmakefile :
		- now handles FS_IOC_GETFLAGS and FS_IOC_GETVERSION constants
		  (in <linux/fs.h>)
		- added test-omg-special test case

		include/innocent-pear/omg.h :
		- now uses FS_IOC_GETFLAGS and/or FS_IOC_GETVERSION if present
		- fixed some glitches in omg<...>::special(...)'s procedure
		  to decide whether to enable certain sequences

		include/innocent-pear/rofl.h :
		- now writes debug messages about rofl<...>::ioctl if
		  innocent_pear_DEBUG is defined

		include/innocent-pear/kthxbai.h :
		- fixed silly glitch in looping construct

		include/innocent0-pear/tfw.h :
		- rewriting...

		test/test-omg-special.cc ,
		test/test-omg-special.good :
		- new

		infra/wipe-wrapper.sh :
		- now only tries to wipe each file once

2016-12-19	Now uses the `wipe' utility build-side, if present.

		infra/wipe-wrapper.sh :
		- new

		GNUmakefile :
		- may now define $(RM) to use wipe-wrapper.sh

		configure :
		- now checks for `wipe' utility build-side

2016-12-18	"The best prophet of the future is the past."  (2)

		.travis.yml :
		- added back armv4-linux-gnueabi test configuration
		- added (back) x86-32 test configurations with g++ (and gcc)

		README.md :
		- removed compiler crash description -- was likely caused by
		  ohai.h, which is now removed

		include/innocent-pear/omg.h :
		- fixed typo that caused armv4 compilation to fail

		include/innocent-pear/unpossible.h :
		- added workaround for weird armv4 issue

2016-12-17	More loops.

		include/innocent-pear/omg.h :