@@ -1,6 +1,7 @@
 2016-12-25	Eye octal.  (2)
 
 		include/innocent-pear/omg.h :
+		- rewrote much of omg<...>::wheee(.)
 		- now using new interface to tfw<...>
 		- ugly hack for testing under Qemu: now does not use
 		  FS_IOC_GETFLAGS and FS_IOC_GETVERSION if ptrace(...) is
@@ -9,8 +10,12 @@
 		include/innocent-pear/tfw.h :
 		- redefined interface to tfw<...>
 
-		include/innocent-pear/unpossible.h :
-		- tweaked for x86-32
+		test/test-omg-wheee.cc ,
+		test/test-omg-wheee.good :
+		- added subtests
+
+		GNUmakefile :
+		- now also conditionally defines $(conf_Lolwutconf_dir)
 
 2016-12-24	Eye octal.
 
